Fixed timers on mobile w/ explicit Date constructor

--- a/style.css
+++ b/style.css
@@ -40,6 +40,46 @@ text-align: left;
   margin: 40px 0px 20px;
 }
 
+#Tossup{
+    font-family: sans-serif;
+    color: #fff;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 20px;
+}
+#Tossup > div{
+    padding: 0px 15px;
+    border-radius: 3px;
+    display: inline-block;
+}
+#Tossup div > span{
+    padding: 15px;
+    border-radius: 3px;
+    background: #575;
+    display: inline-block;
+}
+
+#Bonus{
+    font-family: sans-serif;
+    color: #fff;
+    display: inline-block;
+    font-weight: 100;
+    text-align: center;
+    font-size: 20px;
+}
+#Bonus > div{
+    padding: 0px 15px;
+    border-radius: 3px;
+    display: inline-block;
+}
+#Bonus div > span{
+    padding: 15px;
+    border-radius: 3px;
+    background: #575;
+    display: inline-block;
+}
+
 #pumac{
     font-family: sans-serif;
     color: #fff;
